tests/ui/tuple_structs/unimplemented.stderr
error: proc-macro derive panicked
 --> tests/ui/tuple_structs/unimplemented.rs:3:10
  |
3 | #[derive(Jsonable)]
  |          ^^^^^^^^
  |
  = help: message: this derive macro only works on structs with named fields
