tests/ui/tuple_structs/unimplemented.rs
use jsonable::*;

#[derive(Jsonable)]
struct TupleStruct(u8, u16);

fn main() {}